# airbnb-data-analyst-agent

./: .gitignore  Project Requirements.txt  README.md  check_prices_all.py  cloudbuild.yaml  docker-compose.yml
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  evaluate.py  evaluation_fix_test.json  evaluation_gpt41_test.json  evaluation_gpt54mini_test.json  evaluation_openrouter_gpt54mini_20260411.json  evaluation_openrouter_smoke_after_readme.json  evaluation_quicktest.json  evaluation_rerun_20260411.json  evaluation_results.json  evaluation_results_flash.json  evaluation_test_final.json  main.py  pipeline.py  pyproject.toml  requirements.txt  runtime_config.py  vertex_provider.py
backend/agent_defs/: __init__.py  analyst.py  collector.py  config.py  hypothesizer.py  orchestrator.py  presenter.py  registry.py
backend/models/: schemas.py
backend/prompts/: README.md  __init__.py  analyst.md  collector.md  hypothesizer.md  orchestrator.md  presenter.md
backend/tests/: test_pipeline_helpers.py  test_runtime_config.py  test_tools.py
backend/tools/: code_executor.py  sql_runner.py
frontend/: Dockerfile  next.config.ts  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/share/[id]/: page.tsx
frontend/src/components/: ChatInput.tsx  DataOverview.tsx  Header.tsx  MessageBubble.tsx  PipelineFlowchart.tsx  QueryResultSummary.tsx  SchemaExplorer.tsx  SqlQueryBlock.tsx  ThinkingTrace.tsx  WaitingGame.tsx
frontend/src/lib/: pipeline-stages.ts
tasks/: lessons.md  todo.md
